2008-08-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (ImgPhotoConfigureMaster): Ensure that uses of
	TclStackAlloc and TclStackFree balance.

2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>

	* library/tkfbox.tcl: Fix the multiple selection error for
	tk_getOpenFile -multiple 1 which fails on all unix platforms since the
	adoption of ttk widgets. [Bug 1936220]

2008-08-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c:	     Split the implementation of the core of
	* generic/tkImgPhoto.h:	     photo images into two pieces, the photo
	* generic/tkImgPhInstance.c: master (which manages the data model and
	the interaction with the script level) and the photo instances (which
	handle display).

2008-08-22  Don Porter  <dgp@users.sourceforge.net>

	*** 8.6a2 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.6a2 release.

2008-08-21  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* tests/menuDraw.test: Update to tcltest2
	* tests/msgbox.test:
	* tests/oldpack.test:
	* tests/ pack.test:
	* tests/panedwindow.test:

2008-08-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkOption.c (ExtendArray): Rework so that the code uses
	ckrealloc (idiomatically) rather than its home-brewed version.

2008-08-19  George Peter Staplin <georgeps@users.sourceforge.net>

	After some discussion with Joe English and subsequently the X.org
	developers (Keith Packard in particular), it was discovered that Tk is
	doing management of XIDs that it shouldn't need to do. The very common
	XC-MISC extension which has come with every version of X for the last
	15 years is used with Xlib now, to retrieve the information about the
	used/unused XIDs. The public Tk_FreeXId is now a no-op. [Bug 2039720]

	* generic/tkError.c: Remove the usage of TkpWindowWasRecentlyDeleted.
	* generic/tkInt.decls: Update the declarations for the now unused
	internal stubs.
	* generic/tkIntDecls.h: Regenerated based on tkInt.decls.